// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render 1`] = `
<div>
  <ul
    class="nav"
  />
</div>
`;

exports[`<Nav /> should render with a wrapper 1`] = `
<div>
  <div
    class="overflow-hidden"
  >
    <ul
      class="nav"
    />
  </div>
</div>
`;
